data/derived/sp14/progs/unify/prog4318.ml.out
Characters 28-40:
  let fixpoint (f,b) = wwhile((f, f b = b), b);;
                              ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
